--- a/literaturliste_BA.bib
+++ b/literaturliste_BA.bib
@@ -261,7 +261,7 @@
 	urldate = {2019-06-04},
 	date = {2006-02},
 	langid = {english},
-	keywords = {Ecology, {BA}, Statistical Analysis, Biogeography, Microbiology},
+	keywords = {Review, Ecology, {BA}, Statistical Analysis, Biogeography, Microbiology},
 	file = {Martiny et al. - 2006 - Microbial biogeography putting microorganisms on .pdf:C\:\\Users\\David\\Zotero\\storage\\8UIZIAL9\\Martiny et al. - 2006 - Microbial biogeography putting microorganisms on .pdf:application/pdf}
 }
 
@@ -397,6 +397,7 @@
 	urldate = {2019-06-05},
 	date = {2004-12-17},
 	langid = {english},
+	keywords = {Ecology, {BA}, Statistical Analysis, Diversity},
 	file = {Chao et al. - 2004 - A new statistical approach for assessing similarit.pdf:C\:\\Users\\David\\Zotero\\storage\\Y2TILBV2\\Chao et al. - 2004 - A new statistical approach for assessing similarit.pdf:application/pdf}
 }
 
@@ -622,23 +623,6 @@
 	file = {Horner-Devine et al. - 2004 - A taxa–area relationship for bacteria.pdf:C\:\\Users\\David\\Zotero\\storage\\WBUXI8JH\\Horner-Devine et al. - 2004 - A taxa–area relationship for bacteria.pdf:application/pdf}
 }
 
-@article{horner-devine_ecological_2004-1,
-	title = {An ecological perspective on bacterial biodiversity},
-	volume = {271},
-	issn = {1471-2954},
-	url = {http://www.royalsocietypublishing.org/doi/10.1098/rspb.2003.2549},
-	doi = {10.1098/rspb.2003.2549},
-	pages = {113--122},
-	number = {1535},
-	journaltitle = {Proceedings of the Royal Society of London. Series B: Biological Sciences},
-	shortjournal = {Proceedings of the Royal Society of London. Series B: Biological Sciences},
-	author = {Horner-Devine, M. Claire and Carney, Karen M. and Bohannan, Brendan J. M.},
-	urldate = {2019-06-09},
-	date = {2004-01-22},
-	langid = {english},
-	file = {Horner-Devine et al. - 2004 - An ecological perspective on bacterial biodiversit.pdf:C\:\\Users\\David\\Zotero\\storage\\GCAKB2UX\\Horner-Devine et al. - 2004 - An ecological perspective on bacterial biodiversit.pdf:application/pdf}
-}
-
 @article{claire_horner-devine_bacterial_2003,
 	title = {Bacterial diversity patterns along a gradient of primary productivity: Bacterial diversity and primary productivity},
 	volume = {6},
@@ -730,21 +714,190 @@
 	file = {Metfies et al. - 2016 - Biogeography and Photosynthetic Biomass of Arctic .pdf:C\:\\Users\\David\\Zotero\\storage\\QEIYBIEM\\Metfies et al. - 2016 - Biogeography and Photosynthetic Biomass of Arctic .pdf:application/pdf}
 }
 
-@article{soltwedel_natural_2016-1,
-	title = {Natural variability or anthropogenically-induced variation? Insights from 15 years of multidisciplinary observations at the arctic marine {LTER} site {HAUSGARTEN}},
-	volume = {65},
-	issn = {1470160X},
-	url = {https://linkinghub.elsevier.com/retrieve/pii/S1470160X15005361},
-	doi = {10.1016/j.ecolind.2015.10.001},
-	shorttitle = {Natural variability or anthropogenically-induced variation?},
-	abstract = {Time-series studies of arctic marine ecosystems are rare. This is not surprising since polar regions are largely only accessible by means of expensive modern infrastructure and instrumentation. In 1999, the Alfred Wegener Institute, Helmholtz-Centre for Polar and Marine Research ({AWI}) established the {LTER} (Long-Term Ecological Research) observatory {HAUSGARTEN} crossing the Fram Strait at about 79◦ N. Multidisciplinary investigations covering all parts of the open-ocean ecosystem are carried out at a total of 21 permanent sampling sites in water depths ranging between 250 and 5500 m. From the outset, repeated sampling in the water column and at the deep seaﬂoor during regular expeditions in summer months was complemented by continuous year-round sampling and sensing using autonomous instruments in anchored devices (i.e., moorings and free-falling systems). The central {HAUSGARTEN} station at 2500 m water depth in the eastern Fram Strait serves as an experimental area for unique biological in situ experiments at the seaﬂoor, simulating various scenarios in changing environmental settings. Long-term ecological research at the {HAUSGARTEN} observatory revealed a number of interesting temporal trends in numerous biological variables from the pelagic system to the deep seaﬂoor. Contrary to common intuition, the entire ecosystem responded exceptionally fast to environmental changes in the upper water column. Major variations were associated with a Warm-Water-Anomaly evident in surface waters in eastern parts of the Fram Strait between 2005 and 2008. However, even after 15 years of intense time-series work at {HAUSGARTEN}, we cannot yet predict with complete certainty whether these trends indicate lasting alterations due to anthropologically-induced global environmental changes of the system, or whether they reﬂect natural variability on multiyear time-scales, for example, in relation to decadal oscillatory atmospheric processes.},
-	pages = {89--102},
-	journaltitle = {Ecological Indicators},
-	shortjournal = {Ecological Indicators},
-	author = {Soltwedel, Thomas and Bauerfeind, Eduard and Bergmann, Melanie and Bracher, Astrid and Budaeva, Nataliya and Busch, Kathrin and Cherkasheva, Alexandra and Fahl, Kirsten and Grzelak, Katarzyna and Hasemann, Christiane and Jacob, Marianne and Kraft, Angelina and Lalande, Catherine and Metfies, Katja and Nöthig, Eva-Maria and Meyer, Kirstin and Quéric, Nadia-Valérie and Schewe, Ingo and Włodarska-Kowalczuk, Maria and Klages, Michael},
-	urldate = {2019-06-11},
-	date = {2016-06},
+@article{gloor_microbiome_2017,
+	title = {Microbiome Datasets Are Compositional: And This Is Not Optional},
+	volume = {8},
+	issn = {1664-302X},
+	url = {http://journal.frontiersin.org/article/10.3389/fmicb.2017.02224/full},
+	doi = {10.3389/fmicb.2017.02224},
+	shorttitle = {Microbiome Datasets Are Compositional},
+	abstract = {Datasets collected by high-throughput sequencing ({HTS}) of 16S {rRNA} gene amplimers, metagenomes or metatranscriptomes are commonplace and being used to study human disease states, ecological differences between sites, and the built environment. There is increasing awareness that microbiome datasets generated by {HTS} are compositional because they have an arbitrary total imposed by the instrument. However, many investigators are either unaware of this or assume speciﬁc properties of the compositional data. The purpose of this review is to alert investigators to the dangers inherent in ignoring the compositional nature of the data, and point out that {HTS} datasets derived from microbiome studies can and should be treated as compositions at all stages of analysis. We brieﬂy introduce compositional data, illustrate the pathologies that occur when compositional data are analyzed inappropriately, and ﬁnally give guidance and point to resources and examples for the analysis of microbiome datasets using compositional data analysis.},
+	pages = {2224},
+	journaltitle = {Frontiers in Microbiology},
+	shortjournal = {Front. Microbiol.},
+	author = {Gloor, Gregory B. and Macklaim, Jean M. and Pawlowsky-Glahn, Vera and Egozcue, Juan J.},
+	urldate = {2019-06-19},
+	date = {2017-11-15},
+	langid = {english},
+	keywords = {Review, Ecology, {BA}, Rare Species, Microbiology, Rarefaction},
+	file = {Gloor et al. - 2017 - Microbiome Datasets Are Compositional And This Is.pdf:C\:\\Users\\David\\Zotero\\storage\\EK5EWWH2\\Gloor et al. - 2017 - Microbiome Datasets Are Compositional And This Is.pdf:application/pdf}
+}
+
+@article{buttigieg_guide_2014,
+	title = {A guide to statistical analysis in microbial ecology: a community-focused, living review of multivariate data analyses},
+	volume = {90},
+	issn = {01686496},
+	url = {https://academic.oup.com/femsec/article-lookup/doi/10.1111/1574-6941.12437},
+	doi = {10.1111/1574-6941.12437},
+	shorttitle = {A guide to statistical analysis in microbial ecology},
+	abstract = {The application of multivariate statistical analyses has become a consistent feature in microbial ecology. However, many microbial ecologists are still in the process of developing a deep understanding of these methods and appreciating their limitations. As a consequence, staying abreast of progress and debate in this arena poses an additional challenge to many microbial ecologists. To address these issues, we present the {GUide} to {STatistical} Analysis in Microbial Ecology ({GUSTA} {ME}): a dynamic, web-based resource providing accessible descriptions of numerous multivariate techniques relevant to microbial ecologists. A combination of interactive elements allows users to discover and navigate between methods relevant to their needs and examine how they have been used by others in the ﬁeld. We have designed {GUSTA} {ME} to become a community-led and -curated service, which we hope will provide a common reference and forum to discuss and disseminate analytical techniques relevant to the microbial ecology community.},
+	pages = {543--550},
+	number = {3},
+	journaltitle = {{FEMS} Microbiology Ecology},
+	shortjournal = {{FEMS} Microbiol Ecol},
+	author = {Buttigieg, Pier Luigi and Ramette, Alban},
+	urldate = {2019-06-21},
+	date = {2014-12},
+	langid = {english},
+	keywords = {Review, Ecology, Statistics - Methodology, {BA}, Statistical Analysis, Microbiology},
+	file = {Buttigieg and Ramette - 2014 - A guide to statistical analysis in microbial ecolo.pdf:C\:\\Users\\David\\Zotero\\storage\\WJC75TSH\\Buttigieg and Ramette - 2014 - A guide to statistical analysis in microbial ecolo.pdf:application/pdf}
+}
+
+@article{fuhrman_annually_2006,
+	title = {Annually reoccurring bacterial communities are predictable from ocean conditions},
+	volume = {103},
+	issn = {0027-8424, 1091-6490},
+	url = {http://www.pnas.org/cgi/doi/10.1073/pnas.0602399103},
+	doi = {10.1073/pnas.0602399103},
+	pages = {13104--13109},
+	number = {35},
+	journaltitle = {Proceedings of the National Academy of Sciences},
+	shortjournal = {Proceedings of the National Academy of Sciences},
+	author = {Fuhrman, J. A. and Hewson, I. and Schwalbach, M. S. and Steele, J. A. and Brown, M. V. and Naeem, S.},
+	urldate = {2019-06-25},
+	date = {2006-08-29},
+	langid = {english},
+	keywords = {Turnover, Ecology, Statistics - Methodology, {BA}, Biogeography, Microbiology},
+	file = {Fuhrman et al. - 2006 - Annually reoccurring bacterial communities are pre.pdf:C\:\\Users\\David\\Zotero\\storage\\R42IYESU\\Fuhrman et al. - 2006 - Annually reoccurring bacterial communities are pre.pdf:application/pdf}
+}
+
+@article{hatosy_beta_2013,
+	title = {Beta diversity of marine bacteria depends on temporal scale},
+	volume = {94},
+	issn = {0012-9658},
+	url = {http://doi.wiley.com/10.1890/12-2125.1},
+	doi = {10.1890/12-2125.1},
+	abstract = {Factors controlling the spatial distribution of bacterial diversity have been intensely studied, whereas less is known about temporal changes. To address this, we tested whether the mechanisms that underlie bacterial temporal b-diversity vary across different scales in three marine microbial communities. While seasonal turnover was detected, at least 73\% of the community variation occurred at intra-seasonal temporal scales, suggesting that episodic events are important in structuring marine microbial communities. In addition, turnover at different temporal scales appeared to be driven by different factors. Intra-seasonal turnover was signiﬁcantly correlated to environmental variables such as phosphate and silicate concentrations, while seasonal and interannual turnover were related to nitrate concentration and temporal distance. We observed a strong link between the magnitude of environmental variation and bacterial b-diversity in different communities. Analogous to spatial biogeography, we found different rates of community changes across temporal scales.},
+	pages = {1898--1904},
+	number = {9},
+	journaltitle = {Ecology},
+	shortjournal = {Ecology},
+	author = {Hatosy, Stephen M. and Martiny, Jennifer B. H. and Sachdeva, Rohan and Steele, Joshua and Fuhrman, Jed A. and Martiny, Adam C.},
+	urldate = {2019-06-25},
+	date = {2013-09},
+	langid = {english},
+	keywords = {Turnover, Ecology, Statistics - Methodology, {BA}, Picoplankton, Biogeography, Microbiology},
+	file = {Hatosy et al. - 2013 - Beta diversity of marine bacteria depends on tempo.pdf:C\:\\Users\\David\\Zotero\\storage\\QDPYQ4WT\\Hatosy et al. - 2013 - Beta diversity of marine bacteria depends on tempo.pdf:application/pdf}
+}
+
+@article{bowman_microbial_2012,
+	title = {Microbial community structure of Arctic multiyear sea ice and surface seawater by 454 sequencing of the 16S {RNA} gene},
+	volume = {6},
+	issn = {1751-7362, 1751-7370},
+	url = {http://www.nature.com/articles/ismej201176},
+	doi = {10.1038/ismej.2011.76},
+	pages = {11--20},
+	number = {1},
+	journaltitle = {The {ISME} Journal},
+	shortjournal = {{ISME} J},
+	author = {Bowman, Jeff S and Rasmussen, Simon and Blom, Nikolaj and Deming, Jody W and Rysgaard, Søren and Sicheritz-Ponten, Thomas},
+	urldate = {2019-06-25},
+	date = {2012-01},
+	langid = {english},
+	keywords = {Ecology, {BA}, Arctic, Microbiology, Sea Ice},
+	file = {Bowman et al. - 2012 - Microbial community structure of Arctic multiyear .pdf:C\:\\Users\\David\\Zotero\\storage\\27GIGQVG\\Bowman et al. - 2012 - Microbial community structure of Arctic multiyear .pdf:application/pdf}
+}
+
+@article{sunagawa_structure_2015,
+	title = {Structure and function of the global ocean microbiome},
+	volume = {348},
+	issn = {0036-8075, 1095-9203},
+	url = {http://www.sciencemag.org/cgi/doi/10.1126/science.1261359},
+	doi = {10.1126/science.1261359},
+	pages = {1261359--1261359},
+	number = {6237},
+	journaltitle = {Science},
+	shortjournal = {Science},
+	author = {Sunagawa, S. and Coelho, L. P. and Chaffron, S. and Kultima, J. R. and Labadie, K. and Salazar, G. and Djahanschiri, B. and Zeller, G. and Mende, D. R. and Alberti, A. and Cornejo-Castillo, F. M. and Costea, P. I. and Cruaud, C. and d'Ovidio, F. and Engelen, S. and Ferrera, I. and Gasol, J. M. and Guidi, L. and Hildebrand, F. and Kokoszka, F. and Lepoivre, C. and Lima-Mendez, G. and Poulain, J. and Poulos, B. T. and Royo-Llonch, M. and Sarmento, H. and Vieira-Silva, S. and Dimier, C. and Picheral, M. and Searson, S. and Kandels-Lewis, S. and {Tara Oceans coordinators} and Bowler, C. and de Vargas, C. and Gorsky, G. and Grimsley, N. and Hingamp, P. and Iudicone, D. and Jaillon, O. and Not, F. and Ogata, H. and Pesant, S. and Speich, S. and Stemmann, L. and Sullivan, M. B. and Weissenbach, J. and Wincker, P. and Karsenti, E. and Raes, J. and Acinas, S. G. and Bork, P. and Boss, E. and Bowler, C. and Follows, M. and Karp-Boss, L. and Krzic, U. and Reynaud, E. G. and Sardet, C. and Sieracki, M. and Velayoudon, D.},
+	urldate = {2019-06-26},
+	date = {2015-05-22},
+	langid = {english},
+	keywords = {Ecology, Statistics - Methodology, {BA}, Biogeography, Microbiology},
+	file = {Sunagawa et al. - 2015 - Structure and function of the global ocean microbi.pdf:C\:\\Users\\David\\Zotero\\storage\\ZWZFRMUQ\\Sunagawa et al. - 2015 - Structure and function of the global ocean microbi.pdf:application/pdf}
+}
+
+@incollection{martinez-garcia_adaptations_2019,
+	title = {Adaptations of Microorganisms to Low Nutrient Environments: Managing Life in the Oligotrophic Ocean},
+	isbn = {978-0-12-809633-8},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/B9780128096338906964},
+	shorttitle = {Adaptations of Microorganisms to Low Nutrient Environments},
+	pages = {B9780128096338906964},
+	booktitle = {Reference Module in Life Sciences},
+	publisher = {Elsevier},
+	author = {Martínez-García, Sandra and Pinhassi, Jarone},
+	urldate = {2019-06-26},
+	date = {2019},
+	langid = {english},
+	doi = {10.1016/B978-0-12-809633-8.90696-4},
+	keywords = {Pelagial, Review, Ecology, Oligotrophy, {BA}, Microbiology},
+	file = {Martínez-García and Pinhassi - 2019 - Adaptations of Microorganisms to Low Nutrient Envi.pdf:C\:\\Users\\David\\Zotero\\storage\\NNKKBVB2\\Martínez-García and Pinhassi - 2019 - Adaptations of Microorganisms to Low Nutrient Envi.pdf:application/pdf}
+}
+
+@article{mcmurdie_waste_2014,
+	title = {Waste Not, Want Not: Why Rarefying Microbiome Data Is Inadmissible},
+	volume = {10},
+	issn = {1553-7358},
+	url = {https://dx.plos.org/10.1371/journal.pcbi.1003531},
+	doi = {10.1371/journal.pcbi.1003531},
+	shorttitle = {Waste Not, Want Not},
+	abstract = {Current practice in the normalization of microbiome count data is inefficient in the statistical sense. For apparently historical reasons, the common approach is either to use simple proportions (which does not address heteroscedasticity) or to use rarefying of counts, even though both of these approaches are inappropriate for detection of differentially abundant species. Well-established statistical theory is available that simultaneously accounts for library size differences and biological variability using an appropriate mixture model. Moreover, specific implementations for {DNA} sequencing read count data (based on a Negative Binomial model for instance) are already available in {RNA}-Seq focused R packages such as {edgeR} and {DESeq}. Here we summarize the supporting statistical theory and use simulations and empirical data to demonstrate substantial improvements provided by a relevant mixture model framework over simple proportions or rarefying. We show how both proportions and rarefied counts result in a high rate of false positives in tests for species that are differentially abundant across sample classes. Regarding microbiome sample-wise clustering, we also show that the rarefying procedure often discards samples that can be accurately clustered by alternative methods. We further compare different Negative Binomial methods with a recently-described zero-inflated Gaussian mixture, implemented in a package called {metagenomeSeq}. We find that {metagenomeSeq} performs well when there is an adequate number of biological replicates, but it nevertheless tends toward a higher false positive rate. Based on these results and well-established statistical theory, we advocate that investigators avoid rarefying altogether. We have provided microbiome-specific extensions to these tools in the R package, phyloseq.},
+	pages = {e1003531},
+	number = {4},
+	journaltitle = {{PLoS} Computational Biology},
+	shortjournal = {{PLoS} Comput Biol},
+	author = {{McMurdie}, Paul J. and Holmes, Susan},
+	editor = {{McHardy}, Alice Carolyn},
+	urldate = {2019-06-26},
+	date = {2014-04-03},
 	langid = {english},
 	keywords = {new},
-	file = {Soltwedel et al. - 2016 - Natural variability or anthropogenically-induced v.pdf:C\:\\Users\\David\\Zotero\\storage\\XFAQT22X\\Soltwedel et al. - 2016 - Natural variability or anthropogenically-induced v.pdf:application/pdf}
+	file = {McMurdie and Holmes - 2014 - Waste Not, Want Not Why Rarefying Microbiome Data.pdf:C\:\\Users\\David\\Zotero\\storage\\GCRWDLW5\\McMurdie and Holmes - 2014 - Waste Not, Want Not Why Rarefying Microbiome Data.pdf:application/pdf}
+}
+
+@article{borcard_all-scale_2002,
+	title = {All-scale spatial analysis of ecological data by means of principal coordinates of neighbour matrices},
+	volume = {153},
+	issn = {03043800},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0304380001005014},
+	doi = {10.1016/S0304-3800(01)00501-4},
+	abstract = {Spatial heterogeneity of ecological structures originates either from the physical forcing of environmental variables or from community processes. In both cases, spatial structuring plays a functional role in ecosystems. Ecological models should explicitly take into account the spatial structure of ecosystems. In previous work, we used a polynomial function of the geographic coordinates of the sampling sites to model broad-scale spatial variation in a canonical (regression-type) modelling context. In this paper, we propose a method for detecting and quantifying spatial patterns over a wide range of scales. This is obtained by eigenvalue decomposition of a truncated matrix of geographic distances among the sampling sites. The eigenvectors corresponding to positive eigenvalues are used as spatial descriptors in regression or canonical analysis. This method can be applied to any set of sites providing a good coverage of the geographic sampling area. This paper investigates the behaviour of the method using numerical simulations and an artiﬁcial pseudo-ecological data set of known properties. © 2002 Elsevier Science B.V. All rights reserved.},
+	pages = {51--68},
+	number = {1},
+	journaltitle = {Ecological Modelling},
+	shortjournal = {Ecological Modelling},
+	author = {Borcard, Daniel and Legendre, Pierre},
+	urldate = {2019-06-27},
+	date = {2002-07},
+	langid = {english},
+	keywords = {Ecology, Statistics - Methodology, {BA}, Statistical Analysis, Biogeography},
+	file = {Borcard and Legendre - 2002 - All-scale spatial analysis of ecological data by m.pdf:C\:\\Users\\David\\Zotero\\storage\\A4IK9B8F\\Borcard and Legendre - 2002 - All-scale spatial analysis of ecological data by m.pdf:application/pdf}
+}
+
+@article{hillebrand_biodiversity_2018,
+	title = {Biodiversity change is uncoupled from species richness trends: Consequences for conservation and monitoring},
+	volume = {55},
+	issn = {00218901},
+	url = {http://doi.wiley.com/10.1111/1365-2664.12959},
+	doi = {10.1111/1365-2664.12959},
+	shorttitle = {Biodiversity change is uncoupled from species richness trends},
+	pages = {169--184},
+	number = {1},
+	journaltitle = {Journal of Applied Ecology},
+	shortjournal = {J Appl Ecol},
+	author = {Hillebrand, Helmut and Blasius, Bernd and Borer, Elizabeth T. and Chase, Jonathan M. and Downing, John A. and Eriksson, Britas Klemens and Filstrup, Christopher T. and Harpole, W. Stanley and Hodapp, Dorothee and Larsen, Stefano and Lewandowska, Aleksandra M. and Seabloom, Eric W. and Van de Waal, Dedmer B. and Ryabov, Alexey B.},
+	editor = {Cadotte, Marc},
+	urldate = {2019-06-27},
+	date = {2018-01},
+	langid = {english},
+	file = {Hillebrand et al. - 2018 - Biodiversity change is uncoupled from species rich.pdf:C\:\\Users\\David\\Zotero\\storage\\I9BB3WHV\\Hillebrand et al. - 2018 - Biodiversity change is uncoupled from species rich.pdf:application/pdf}
 }
